# SETSM

./: .basic_topology_types.hpp.swp  .gitignore  .gitmodules  .grid_triangulation.cpp.swp  .travis.yml  CHANGELOG  CMAKE_README.md  CMakeLists.txt  CollinearEQ.cpp  CollinearEQ.hpp  CoordConversion.cpp  CoordConversion.hpp  Coregistration.cpp  Coregistration.hpp  Dockerfile  Function.c  Function.h  GetSqlite.sh  GridVoxel.cpp  GridVoxel.hpp  KNOWN_ISSUES  LSF.cpp  LSF.hpp  Makefile  Makefile.Triangle  Makefile.cray  Makefile.gcc  Makefile.icc  Makefile.mpi.gcc  Makefile.pgi  Orthogeneration.cpp  Orthogeneration.hpp  README.md  README_Windows.md  SDM.cpp  SDM.hpp  SubFunctions.cpp  SubFunctions.hpp  SubmoduleInstall.py  Template.hpp  (+32 more)
.github/workflows/: versions.yml
cmake/modules/: FindGeoTIFF.cmake  FindPROJ.cmake  FindSQLITE3.cmake  FindTIFF.cmake
